--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "cloudinary": "^2.5.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.16",
     "socket.io": "^4.8.1",
+    "stripe": "^17.5.0",
+    "twilio": "^5.4.1",
     "validator": "^13.12.0"
   }
 }
